--- a/Python.5-6/server/templates/reg_ko.html
+++ b/Python.5-6/server/templates/reg_ko.html
@@ -1,7 +1,13 @@
-<html>
-   <head>
-      <title>
-         
-      </title>
-   </head>
+<html></html>
+    <head>
+        <title>
+            Ciao a tutti
+        </title>
+    </head>
+    <body>
+        registrazione NON terminata corretamente
+        <img src="../static/img/AA.gif">
+        
+
+    </body>
 </html>
