--- a/Python.5-6/server/templates/registrati.html
+++ b/Python.5-6/server/templates/registrati.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f2f5;
+            background-color: #5b9dff;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -32,7 +32,7 @@
         label {
             display: block;
             margin: 10px 0 5px;
-            color: #555;
+            color: #b87474;
             text-align: left;
         }
 
@@ -97,12 +97,6 @@
             <input type="password" id="password" name="password" required>
 
             <input type="submit" value="Registrati">
-        </form>
-
-        <p>Hai già un account?</p>
-        <!-- Pulsante per accedere -->
-        <form action="/accedi" method="GET">
-            <button type="submit">Accedi</button>
         </form>
     </div>
 </body>
